--- a/.github/actions/setup-python-project/action.yaml
+++ b/.github/actions/setup-python-project/action.yaml
@@ -14,7 +14,7 @@ runs:
     - name: "Install Poetry"
       shell: bash
       run: |
-        curl -sSL https://install.python-poetry.org | python3 -
+        curl --proto "=https" -sSL https://install.python-poetry.org | python3 -
         echo "$HOME/.local/bin" >> $GITHUB_PATH
     - name: "Install dependencies"
       shell: bash
