--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -31,6 +31,19 @@ on:
         description: "Version of the software, set by the CI/CD pipeline workflow"
         required: true
         type: string
+    secrets:
+      IDP_AWS_REPORT_UPLOAD_ACCOUNT_ID:
+        description: "AWS Account ID for report upload"
+        required: true
+      IDP_AWS_REPORT_UPLOAD_REGION:
+        description: "AWS Region for report upload"
+        required: true
+      IDP_AWS_REPORT_UPLOAD_ROLE_NAME:
+        description: "AWS Role Name for report upload"
+        required: true
+      IDP_AWS_REPORT_UPLOAD_BUCKET_ENDPOINT:
+        description: "AWS Bucket Endpoint for report upload"
+        required: true
 
 jobs:
   scan-secrets:
