--- a/.github/workflows/stage-2-test.yaml
+++ b/.github/workflows/stage-2-test.yaml
@@ -11,6 +11,10 @@ on:
         description: "Python version, set by the CI/CD pipeline workflow"
         required: true
         type: string
+    secrets:
+      SONAR_TOKEN:
+        description: "SonarCloud token for authentication"
+        required: true
 
 jobs:
   create-coverage-name:
@@ -222,7 +226,7 @@ jobs:
           name: ${{ needs.create-coverage-name.outputs.coverage-name }}
           path: coverage-reports/
       - name: "SonarCloud Scan"
-        uses: SonarSource/sonarqube-scan-action@v7
+        uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
