--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,14 @@
 sonar.host.url=https://sonarcloud.io
 sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
+# source files to be analyzed
 sonar.sources=.github,gateway-api,infrastructure,scripts,Makefile
-sonar.tests=tests,gateway-api/tests
-sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,gateway-api/tests/**,**/__pycache__/**,**/.venv/**,**/*.drawio
+sonar.exclusions=docs/**,gateway-api/test-artefacts/**,gateway-api/coverage-html/**,gateway-api/src/**/test_*.py,**/__pycache__/**,**/.venv/**
+
+# test files to be analyzed
+sonar.tests=gateway-api
+sonar.test.inclusions=gateway-api/**/test_*.py, gateway-api/tests/**
+
 sonar.coverage.exclusions=**/tests/**,**/features/**,**/test_*.py,**/stubs/**
 # Set Python version for more precise analysis
 sonar.python.version=3.14
