[GPCAPIM-254]: Lift and shift of lambda functionality in to a Flask app.

--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -1,11 +1,13 @@
 # Retrieve the python version from build arguments, deliberately set to "invalid" by default to highlight when no version is provided when building the container.
 ARG PYTHON_VERSION=invalid
-# Use the specified python version to retrieve the required base lambda image.
-ARG url=public.ecr.aws/lambda/python:${PYTHON_VERSION}
-FROM $url
+FROM python:${PYTHON_VERSION}-slim AS gateway-api
 
 COPY resources/ /resources
 
-COPY /resources/build/gateway-api ${LAMBDA_TASK_ROOT}
+WORKDIR /resources/build/gateway-api
 
-CMD [ "lambda_handler.handler" ]
+ENV PYTHONPATH=/resources/build/gateway-api
+
+ENTRYPOINT ["python"]
+CMD ["gateway_api/app.py"]
+
