--- a/gateway-api/pyproject.toml
+++ b/gateway-api/pyproject.toml
@@ -10,6 +10,8 @@ requires-python = ">3.13,<4.0.0"
 
 [tool.poetry.dependencies]
 clinical-data-common = { git = "https://github.com/NHSDigital/clinical-data-common.git", tag = "v0.1.0" }
+flask = "^3.1.2"
+types-flask = "^1.1.6"
 
 [tool.poetry]
 packages = [{include = "gateway_api", from = "src"},
