--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -1,11 +1,24 @@
 # Retrieve the python version from build arguments, deliberately set to "invalid" by default to highlight when no version is provided when building the container.
 ARG PYTHON_VERSION=invalid
-# Use the specified python version to retrieve the required base lambda image.
-ARG url=public.ecr.aws/lambda/python:${PYTHON_VERSION}
-FROM $url
+FROM python:${PYTHON_VERSION}-alpine3.23 AS gateway-api
+
+RUN addgroup -S nonroot \
+    && adduser -S gateway_api_user -G nonroot
 
 COPY resources/ /resources
 
-COPY /resources/build/gateway-api ${LAMBDA_TASK_ROOT}
+WORKDIR /resources/build/gateway-api
 
-CMD [ "lambda_handler.handler" ]
+ENV PYTHONPATH=/resources/build/gateway-api
+ENV FLASK_HOST="0.0.0.0"
+ENV FLASK_PORT="8080"
+
+ARG COMMIT_VERSION
+ENV COMMIT_VERSION=$COMMIT_VERSION
+ARG BUILD_DATE
+ENV BUILD_DATE=$BUILD_DATE
+
+USER gateway_api_user
+ENTRYPOINT ["python"]
+CMD ["gateway_api/app.py"]
+
