--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -22,6 +22,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
+      pull-requests: write
 
     # One job per branch at a time
     concurrency:
