--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /resources/build/gateway-api
 
 ENV PYTHONPATH=/resources/build/gateway-api
 ENV FLASK_HOST="0.0.0.0"
+ENV FLASK_PORT="8080"
 
 ENTRYPOINT ["python"]
 CMD ["gateway_api/app.py"]
