[GPCAPIM-254]: Make it clear which version is deployed in the health endpoint.

--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -10,6 +10,11 @@ ENV PYTHONPATH=/resources/build/gateway-api
 ENV FLASK_HOST="0.0.0.0"
 ENV FLASK_PORT="8080"
 
+ARG COMMIT_VERSION
+ENV COMMIT_VERSION=$COMMIT_VERSION
+ARG BUILD_DATE
+ENV BUILD_DATE=$BUILD_DATE
+
 ENTRYPOINT ["python"]
 CMD ["gateway_api/app.py"]
 
