--- a/infrastructure/images/gateway-api/Dockerfile
+++ b/infrastructure/images/gateway-api/Dockerfile
@@ -1,6 +1,9 @@
 # Retrieve the python version from build arguments, deliberately set to "invalid" by default to highlight when no version is provided when building the container.
 ARG PYTHON_VERSION=invalid
-FROM python:${PYTHON_VERSION}-slim AS gateway-api
+FROM python:${PYTHON_VERSION}-alpine3.23 AS gateway-api
+
+RUN addgroup -S nonroot \
+    && adduser -S gateway_api_user -G nonroot
 
 COPY resources/ /resources
 
@@ -15,6 +18,7 @@ ENV COMMIT_VERSION=$COMMIT_VERSION
 ARG BUILD_DATE
 ENV BUILD_DATE=$BUILD_DATE
 
+USER gateway_api_user
 ENTRYPOINT ["python"]
 CMD ["gateway_api/app.py"]
 
