[GPCAPIM-278]: Install proxygen-cli so that we can deploy an instance of the proxy during from pipeline.

--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -170,6 +170,12 @@ jobs:
 
           yq eval '.x-nhsd-apim.target.url = env(PREVIEW_URL) | .x-nhsd-apim.target.security.secret = env(MTLS_SECRET_KEY)' -i openapi.yaml
 
+      - name: Install proxygen-cli
+        if: github.event.action != 'closed'
+        run: |
+          pip install proxygen-cli
+          proxygen --version
+
       # ---------- Ensure re-deployment (PR updated) ----------
       - name: Force ECS service redeployment
         if: github.event.action == 'synchronize'
