--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -156,17 +156,19 @@ jobs:
           echo "ecs_cluster=$ECS_CLUSTER" >> $GITHUB_OUTPUT
 
       - name: Install yq for YAML template processing
+        if: github.event.action != 'closed'
         run: |
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
 
       - name: Inject secrets into openapi.yaml for deploying proxy
+        if: github.event.action != 'closed'
         working-directory: gateway-api
         env:
           MTLS_SECRET_KEY: ${{ secrets.MTLS_SECRET_KEY }}
           PREVIEW_URL: ${{ steps.tf-output.outputs.preview_url }}
         run: |
-          cp openapi.template.yaml openapi.yaml
+          cp openapi.template.yaml openapi.proxygen.yaml
 
           yq eval '.x-nhsd-apim.target.url = env(PREVIEW_URL) | .x-nhsd-apim.target.security.secret = env(MTLS_SECRET_KEY)' -i openapi.yaml
 
@@ -175,6 +177,32 @@ jobs:
         run: |
           pip install proxygen-cli
           proxygen --version
+
+      - name: Get proxygen machine user details
+        if: github.event.action != 'closed'
+        id: proxygen-machine-user
+        uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802
+        with:
+          secret-ids: |
+            /cds/gateway/dev/proxygen/proxygen-key-secret
+          name-transformation: lowercase
+
+      - name: Deploy preview API proxy
+        if: github.event.action != 'closed'
+        run: |
+          printf "%s" "$_cds_gateway_dev_proxygen_proxygen_key_secret" > /tmp/proxygen_private_key.pem
+
+          proxygen credentials set private_key_path /tmp/proxygen_private_key.pem key_id "$PROXYGEN_KEY_ID" client_id clinical-data-gateway-api-poc-client
+
+          rm -f /tmp/proxygen_private_key.pem
+
+          proxygen instance list
+
+
+      - name: Tear fown preview API proxy
+        if: github.event.action == 'closed'
+        run: |
+          # TODO
 
       # ---------- Ensure re-deployment (PR updated) ----------
       - name: Force ECS service redeployment
