[GPCAPIM-278]: Provide empty defaults for proxygens inputs, username and password, as specified in their docs, https://nhsd-confluence.digital.nhs.uk/spaces/APM/pages/804495095/Proxygen+CLI+user+guide\#ProxygenCLIuserguide-Settingupformachine-useraccess

--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -192,7 +192,7 @@ jobs:
         run: |
           printf "%s" "$_cds_gateway_dev_proxygen_proxygen_key_secret" > /tmp/proxygen_private_key.pem
 
-          proxygen credentials set private_key_path /tmp/proxygen_private_key.pem key_id "$PROXYGEN_KEY_ID" client_id clinical-data-gateway-api-poc-client
+          yes "" | proxygen credentials set private_key_path /tmp/proxygen_private_key.pem key_id "$PROXYGEN_KEY_ID" client_id clinical-data-gateway-api-poc-client
 
           rm -f /tmp/proxygen_private_key.pem
 
