--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -187,21 +187,21 @@ jobs:
             /cds/gateway/dev/proxygen/proxygen-key-secret
           name-transformation: lowercase
 
+      - name: Apply proxygen details
+        if: github.event.action != 'closed'
+        run: |
+          cp settings.yaml $HOME/.proxygen/settings.yaml
+
+          printf "%s" "$_cds_gateway_dev_proxygen_proxygen_key_secret" > /tmp/proxygen_private_key.pem
+          cp credentials.template.yaml $HOME/.proxygen/credentials.yaml
+          yq eval '.private_key_path = "/tmp/proxygen_private_key.pem"' -i $HOME/.proxygen/credentials.yaml
+
+          proxygen instance list
+
       - name: Deploy preview API proxy
         if: github.event.action != 'closed'
         run: |
-          yes "" | proxygen credentials set
-          proxygen settings set api "clinical-data-gateway-api-poc"
-          proxygen settings set endpoint_url "https://proxygen.prod.api.platform.nhs.uk"
-          proxygen settings set spec_output_format "yaml"
-
-          printf "%s" "$_cds_gateway_dev_proxygen_proxygen_key_secret" > /tmp/proxygen_private_key.pem
-
-          proxygen credentials set private_key_path /tmp/proxygen_private_key.pem key_id "$PROXYGEN_KEY_ID" client_id clinical-data-gateway-api-poc-client
-
-          rm -f /tmp/proxygen_private_key.pem
-
-          proxygen instance list
+          # TODO
 
 
       - name: Tear down preview API proxy
