--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -156,7 +156,6 @@ jobs:
           echo "ecs_cluster=$ECS_CLUSTER" >> $GITHUB_OUTPUT
 
       - name: Install yq for YAML template processing
-        if: github.event.action != 'closed'
         run: |
           sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
           sudo chmod +x /usr/local/bin/yq
@@ -173,13 +172,11 @@ jobs:
           yq eval '.x-nhsd-apim.target.url = env(PREVIEW_URL) | .x-nhsd-apim.target.security.secret = env(MTLS_SECRET_KEY)' -i openapi.yaml
 
       - name: Install proxygen-cli
-        if: github.event.action != 'closed'
         run: |
           pip install proxygen-cli
           proxygen --version
 
       - name: Get proxygen machine user details
-        if: github.event.action != 'closed'
         id: proxygen-machine-user
         uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802
         with:
@@ -188,7 +185,6 @@ jobs:
           name-transformation: lowercase
 
       - name: Apply proxygen details
-        if: github.event.action != 'closed'
         working-directory: proxygen
         run: |
           cp settings.yaml $HOME/.proxygen/settings.yaml
@@ -197,18 +193,17 @@ jobs:
           cp credentials.template.yaml $HOME/.proxygen/credentials.yaml
           yq eval '.private_key_path = "/tmp/proxygen_private_key.pem"' -i $HOME/.proxygen/credentials.yaml
 
-          proxygen instance list
-
       - name: Deploy preview API proxy
         if: github.event.action != 'closed'
+        working-directory: gateway-api
         run: |
-          # TODO
+          proxygen instance deploy internal-dev "clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}" gateway-api/openapi.template.yaml --no-confirm
 
 
       - name: Tear down preview API proxy
         if: github.event.action == 'closed'
         run: |
-          # TODO
+          proxygen instance delete internal-dev clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }} --no-confirm
 
       # ---------- Ensure re-deployment (PR updated) ----------
       - name: Force ECS service redeployment
