--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -167,7 +167,7 @@ jobs:
           MTLS_SECRET_KEY: ${{ secrets.MTLS_SECRET_KEY }}
           PREVIEW_URL: ${{ steps.tf-output.outputs.preview_url }}
         run: |
-          cp openapi.template.yaml openapi.proxygen.yaml
+          cp openapi.template.yaml openapi.yaml
 
           yq eval '.x-nhsd-apim.target.url = env(PREVIEW_URL) | .x-nhsd-apim.target.security.secret = env(MTLS_SECRET_KEY)' -i openapi.yaml
 
