--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -155,27 +155,6 @@ jobs:
           ECS_CLUSTER=$(jq -r '.ecs_cluster_name.value' tf-output.json)
           echo "ecs_cluster=$ECS_CLUSTER" >> $GITHUB_OUTPUT
 
-      - name: Install yq for YAML template processing
-        run: |
-          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
-          sudo chmod +x /usr/local/bin/yq
-
-      - name: Inject secrets into openapi.yaml for deploying proxy
-        if: github.event.action != 'closed'
-        working-directory: gateway-api
-        env:
-          MTLS_SECRET_KEY: ${{ secrets.MTLS_SECRET_KEY }}
-          PREVIEW_URL: ${{ steps.tf-output.outputs.preview_url }}
-        run: |
-          cp openapi.template.yaml openapi.yaml
-
-          yq eval '.x-nhsd-apim.target.url = env(PREVIEW_URL) | .x-nhsd-apim.target.security.secret = env(MTLS_SECRET_KEY)' -i openapi.yaml
-
-      - name: Install proxygen-cli
-        run: |
-          pip install proxygen-cli
-          proxygen --version
-
       - name: Get proxygen machine user details
         id: proxygen-machine-user
         uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802
@@ -184,26 +163,21 @@ jobs:
             /cds/gateway/dev/proxygen/proxygen-key-secret
           name-transformation: lowercase
 
-      - name: Apply proxygen details
-        working-directory: proxygen
-        run: |
-          cp settings.yaml $HOME/.proxygen/settings.yaml
-
-          printf "%s" "$_cds_gateway_dev_proxygen_proxygen_key_secret" > /tmp/proxygen_private_key.pem
-          cp credentials.template.yaml $HOME/.proxygen/credentials.yaml
-          yq eval '.private_key_path = "/tmp/proxygen_private_key.pem"' -i $HOME/.proxygen/credentials.yaml
-
       - name: Deploy preview API proxy
         if: github.event.action != 'closed'
-        working-directory: gateway-api
-        run: |
-          proxygen instance deploy internal-dev "clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}" openapi.yaml --no-confirm
-
+        uses: ./.github/actions/deploy-proxy
+        with:
+          mtls-secret-key: ${{ secrets.MTLS_SECRET_KEY }}
+          target-url: ${{ steps.tf-output.outputs.preview_url }}
+          proxy-base-path: 'clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}'
+          proxygen-key-secret: ${{ env._cds_gateway_dev_proxygen_proxygen_key_secret }}
 
       - name: Tear down preview API proxy
         if: github.event.action == 'closed'
-        run: |
-          proxygen instance delete internal-dev clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }} --no-confirm
+        uses: ./.github/actions/tear-down-proxy
+        with:
+          proxy-base-path: 'clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}'
+          proxygen-key-secret: ${{ env._cds_gateway_dev_proxygen_proxygen_key_secret }}
 
       # ---------- Ensure re-deployment (PR updated) ----------
       - name: Force ECS service redeployment
