--- a/.github/actions/deploy-proxy/action.yaml
+++ b/.github/actions/deploy-proxy/action.yaml
@@ -26,12 +26,10 @@ runs:
 
     - name: Inject secrets into openapi.yaml for deploying proxy
       shell: bash
-      working-directory: gateway-api
       run: |
-        cp openapi.template.yaml openapi.yaml
-        # TODO: separate out proxygen stanza and openapi spec and concat
+        cat gateway-api/openapi.yaml proxygen/x-nhsd-apim.template.yaml > /tmp/proxy-specification.yaml
 
-        yq eval '.x-nhsd-apim.target.url = ${{ inputs.target-url }} | .x-nhsd-apim.target.security.secret = ${{ inputs.mtls-secret-key }}' -i openapi.yaml
+        yq eval '.x-nhsd-apim.target.url = ${{ inputs.target-url }} | .x-nhsd-apim.target.security.secret = ${{ inputs.mtls-secret-key }}' -i /tmp/proxy-specification.yaml
 
     - name: Install proxygen-cli
       shell: bash
@@ -51,6 +49,5 @@ runs:
 
     - name: Deploy API proxy
       shell: bash
-      working-directory: gateway-api
       run: |
-        proxygen instance deploy internal-dev ${{ inputs.proxy-base-path }} openapi.yaml --no-confirm
+        proxygen instance deploy internal-dev ${{ inputs.proxy-base-path }} /tmp/proxy-specification.yaml --no-confirm
