--- a/.github/actions/deploy-proxy/action.yaml
+++ b/.github/actions/deploy-proxy/action.yaml
@@ -29,7 +29,7 @@ runs:
       run: |
         cat gateway-api/openapi.yaml proxygen/x-nhsd-apim.template.yaml > /tmp/proxy-specification.yaml
 
-        yq eval '.x-nhsd-apim.target.url = ${{ inputs.target-url }} | .x-nhsd-apim.target.security.secret = ${{ inputs.mtls-secret-key }}' -i /tmp/proxy-specification.yaml
+        yq eval '.x-nhsd-apim.target.url = "${{ inputs.target-url }}" | .x-nhsd-apim.target.security.secret = "${{ inputs.mtls-secret-key }}"' -i /tmp/proxy-specification.yaml
 
     - name: Install proxygen-cli
       shell: bash
