--- a/.github/actions/tear-down-proxy/action.yaml
+++ b/.github/actions/tear-down-proxy/action.yaml
@@ -14,6 +14,10 @@ runs:
   steps:
     - name: Setup Proxygen CLI
       uses: ./.github/actions/setup-proxygen-cli
+      with:
+        mtls-secret-key: ${{ inputs.mtls-secret-key }}
+        target-url: ${{ inputs.target-url }}
+        proxygen-key-secret: ${{ inputs.proxygen-key-secret }}
 
     - name: Tear down preview API proxy
       shell: bash
