[GPCAPIM-278]: Align actions and workflows with Pathology so they can more easily be brought in to clinical-data-common.

--- a/proxygen/credentials.template.yaml
+++ b/proxygen/credentials.template.yaml
@@ -1,7 +1,7 @@
 base_url: https://identity.prod.api.platform.nhs.uk/realms/api-producers
-client_id: clinical-data-gateway-api-poc-client
+client_id: <proxygen machine user client id>
 client_secret: ''
-key_id: poc-cli-key-1
+key_id: <proxygen_key_id>
 password: ''
 private_key_path: <proxygen_private_key_path>
 username: ''
