--- a/.github/workflows/preview-env.yml
+++ b/.github/workflows/preview-env.yml
@@ -159,25 +159,28 @@ jobs:
         id: proxygen-machine-user
         uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802
         with:
-          secret-ids: |
-            /cds/gateway/dev/proxygen/proxygen-key-secret
+          secret-ids: /cds/gateway/dev/proxygen/proxygen-key-secret
           name-transformation: lowercase
 
       - name: Deploy preview API proxy
         if: github.event.action != 'closed'
-        uses: ./.github/actions/deploy-proxy
+        uses: ./.github/actions/proxy/deploy-proxy
         with:
-          mtls-secret-key: ${{ secrets.MTLS_SECRET_KEY }}
+          mtls-secret-name: ${{ vars.PREVIEW_ENV_MTLS_SECRET_NAME}}
           target-url: ${{ steps.tf-output.outputs.preview_url }}
           proxy-base-path: 'clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}'
           proxygen-key-secret: ${{ env._cds_gateway_dev_proxygen_proxygen_key_secret }}
+          proxygen-key-id: ${{ vars.PREVIEW_ENV_PROXYGEN_KEY_ID }}
+          proxygen-api-name: ${{ vars.PREVIEW_ENV_PROXYGEN_API_NAME }}
 
       - name: Tear down preview API proxy
         if: github.event.action == 'closed'
-        uses: ./.github/actions/tear-down-proxy
+        uses: ./.github/actions/proxy/tear-down-proxy
         with:
           proxy-base-path: 'clinical-data-gateway-api-poc-pr-${{ github.event.pull_request.number }}'
           proxygen-key-secret: ${{ env._cds_gateway_dev_proxygen_proxygen_key_secret }}
+          proxygen-key-id: ${{ vars.PREVIEW_ENV_PROXYGEN_KEY_ID }}
+          proxygen-api-name: ${{ vars.PREVIEW_ENV_PROXYGEN_API_NAME }}
 
       # ---------- Ensure re-deployment (PR updated) ----------
       - name: Force ECS service redeployment
