[GPCAPIM-278]: File name was changed.

--- a/.github/actions/proxy/configure-proxygen/action.yaml
+++ b/.github/actions/proxy/configure-proxygen/action.yaml
@@ -28,7 +28,7 @@ runs:
       shell: bash
       working-directory: proxygen
       run: |
-        cp settings.yaml $HOME/.proxygen/settings.yaml
+        cp settings.template.yaml $HOME/.proxygen/settings.yaml
         yq eval '.api_name = "${{ inputs.proxygen-api-name }}"' -i $HOME/.proxygen/settings.yaml
 
         printf "%s" "${{ inputs.proxygen-key-secret }}" > /tmp/proxygen_private_key.pem
