[GPCAPIM-278]: Use correct API name.

--- a/.github/actions/proxy/deploy-proxy/action.yaml
+++ b/.github/actions/proxy/deploy-proxy/action.yaml
@@ -29,7 +29,7 @@ runs:
       with:
         proxygen-key-secret: ${{ inputs.proxygen-key-secret }}
         proxygen-key-id: ${{ inputs.proxygen-key-id }}
-        proxygen-api-name: $${{ inputs.proxygen-api-name }}
+        proxygen-api-name: ${{ inputs.proxygen-api-name }}
 
     - name: Inject secrets into openapi.yaml for deploying proxy
       shell: bash
